examples/test/testpolicy7222.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7222
  namespace: namespace403
spec:
  podSelector:
    matchLabels:
      key5: value37
      key12: value11
      key18: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value5
          key47: value11
      podSelector:
        matchLabels:
          key40: value34
          key32: value28
          key10: value35
